# opencut

./: .gitignore  AGENTS.md  README.de.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
pycut/: __init__.py  __main__.py  analysis.py  asr.py  cli.py  clipper.py  config.py  fcpxml.py  models.py  renderer.py  subtitle.py  translation.py  utils.py  video_io.py
src/: cli.test.ts  cli.ts  config.ts  index.ts  models.test.ts  models.ts  segments.test.ts  segments.ts  text.test.ts  text.ts  translation.test.ts  translation.ts
src/analysis/: client.test.ts  client.ts  corrections.ts  extractors.test.ts  highlights.ts  index.ts  keywords.ts  prompts.test.ts  prompts.ts  sanitize.test.ts  sanitize.ts  scoring.test.ts  scoring.ts
src/asr/: audio.test.ts  audio.ts  helper.test.ts  helper.ts  index.ts  types.ts
src/clipper/: corrections.test.ts  corrections.ts  highlights.test.ts  highlights.ts  index.ts  process.ts  segments.test.ts  segments.ts  transcribe.ts
src/fcpxml/: escape.test.ts  escape.ts  generator.test.ts  generator.ts  index.ts  runs.test.ts  runs.ts  timemap.test.ts  timemap.ts  title.ts
src/io/: ffmpeg.test.ts  ffmpeg.ts  formats.test.ts  formats.ts  index.ts  inputs.test.ts  inputs.ts  transcript.test.ts  transcript.ts
src/renderer/: filter-complex.test.ts  filter-complex.ts  index.ts  render.test.ts  render.ts  select.test.ts  select.ts
tests/: test_correct_words.py  test_fcpxml_naming.py  test_pycut.py  test_translation.py
(+14 files in other folders)
