[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycut"
version = "0.1.0"
description = "A Python library for cutting videos using AI-based speech recognition and natural language processing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "httpx<0.28",
    "mlx-audio>=0.4.1",
    "py-googletrans>=4.0.0",
    "pyobjc-framework-naturallanguage>=12.1",
    "silero-vad>=6.2.1",
]

[project.scripts]
pycut = "pycut.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=9.0.2", "setuptools>=68"]
